--- a/Resources/frontend/less/all.less
+++ b/Resources/frontend/less/all.less
@@ -65,6 +65,10 @@
   background: white;
 }
 
+div#trustamiBadge4 {
+  max-width: 100% !important;
+}
+
 .alert {
   border-radius: 20px !important;
 }
