--- a/Resources/frontend/less/all.less
+++ b/Resources/frontend/less/all.less
@@ -7,6 +7,9 @@ nav.content--breadcrumb.block {
   nav.content--breadcrumb.block {
     display: block;
   }
+  nav.content--breadcrumb.block {
+    margin-bottom: 10px;
+  }
 }
 
 // ribbon.less
